<resources>
    <string name="app_name">Azzida</string>
    <string name="enter_a_custom_amount"><u>Enter a Custom Amount</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="facebook_app_id" translatable="false">753893788752355</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb753893788752355</string>
    <string name="account_kit_client_token"></string>
    <string name="change_photo">Change Photo</string>
    <string name="emailId">Email Id</string>
    <string name="skills_experience">Skills/Experience</string>
    <string name="mention_your_skills_experience_n_comma_separated">Mention your skills/experience \n (comma separated)</string>
    <string name="save">Save</string>
    <string name="pleasewait">Please wait.</string>
    <string name="loginrequired">Login Required</string>
    <string name="welcome_to_azzida">Welcome to Azzida</string>
    <string name="submit">Submit</string>
    <string name="no_job_found">No Job Found</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="no_recent_activity_found">No Recent Activity Found</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="StripAccNo">Strip Account No</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apply_now">Apply Now</string>
    <string name="confirm_availability">Confirm Availability</string>
    <string name="complete_job">Complete Job</string>
    <string name="applicaiton_pending">Application Pending</string>
    <string name="complete_jo">Job Completed</string>
    <string name="description">Description</string>
    <string name="let_s_get_something_done">Let\'s Get Something Done…</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_job">Edit Job</string>
    <string name="post">Post</string>
    <string name="what_would_you_call_it">What would you call it?</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="when_do_you_need_it">When do you need it?</string>
    <string name="select_date">Select date</string>
    <string name="how_long_will_it_take">How long will it take?</string>
    <string name="how_much_do_you_want_to_pay">How much do you want to pay?</string>
    <string name="enter_amount">$ Enter amount</string>
    <string name="where_is_it_at">Where is it at?</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="what_are_all_the_details">What are all the details?</string>
    <string name="enter_the_work_details_here">Enter the work details here</string>
    <string name="how_would_you_categorize_it">How would you categorize it?</string>
    <string name="no_applicant_s_found">No Applicant\'s Found</string>
    <string name="type_your_message">Type your message…</string>
    <string name="we_want_to_help">We Want to Help!</string>
    <string name="reason_for_dispute">Reason for dispute</string>
    <string name="enter_reason_for_dispute">Enter Reason for dispute</string>
    <string name="post_associated">Post associated</string>
    <string name="best_way_to_contact">Best way to contact</string>
    <string name="describe_what_happened">Describe what happened</string>
    <string name="please_explain_the_issue">Please explain the issue…</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="profile">Profile</string>
    <string name="jobs_feed">Jobs Feed</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="options">Options</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="fees_and_charges">Fees and Charges</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="follow_us_azzidajob">Follow Us @AzzidaJob</string>
    <string name="filter">Filter &#160;</string>
    <string name="job_feed">Jobs Feed</string>
    <string name="distance">Distance -</string>
    <string name="_0_miles">0 miles</string>
    <string name="_100_miles">100 miles</string>
    <string name="price">Price</string>
    <string name="_0">$0</string>
    <string name="_100">$100</string>
    <string name="categories">Categories</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply">Apply</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="would_you_like_to_add_a_tip">Would you like to add a Tip?</string>
    <string name="_5">5%</string>
    <string name="_10">10%</string>
    <string name="_20">20%</string>
    <string name="done">Done</string>
    <string name="enter_amount_job">Enter Amount</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_payment_info">Edit Payment Info</string>
    <string name="transaction_payment_history">Payment History</string>
    <string name="my_listings">My Listings</string>
    <string name="my_jobs">My Jobs</string>
    <string name="Cashout">Cash out</string>
    <string name="dispute_resolution">Dispute Resolution</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="jobs_completed">Jobs Performed:</string>
    <string name="joined_azzida">Joined Azzida:</string>
    <string name="skills_experience_one">Skills/Experience:</string>
    <string name="forgot_password_Log">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_up_s">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_s">Login!</string>
    <string name="payments_transactions">Payments/Transactions</string>
    <string name="no_payments_transactions_found">No Payments/Transactions Found</string>
    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>
    <string name="Disclosure">I acknowledge receipt of the Disclosure Regarding Background Investigation and certify that I have read and understand this document.</string>
    <string name="Rights">I acknowledge receipt of the Summary of Your Rights Under the Fair Credit Reporting Act (FCRA) and certify that I have read and understand this document.</string>
    <string name="California_Disclosure_1">I acknowledge receipt of the California Disclosure and certify that I have read and understand this document.</string>
    <string name="California_Disclosure_2">Please check this box if you would like to receive a copy of a consumer report.</string>
    <string name="Acknowledgment">Please check this box if you would like to receive a copy of a consumer report.</string>
    <string name="BackgroundChecker">Background Checker</string>
    <string name="Option">Option</string>
    <string name="Alert">Alert</string>
    <string name="PaymentFailed">Payment Failed</string>
    <string name="CheckYourInternetConnection">Check Your Internet Connection</string>
    <string name="ServerUnderMaintenance">Server Under Maintenance</string>
    <string name="offline_message_1">Connection down?</string>
    <string name="offline_message_2">WIFI and mobile data are supported.</string>
    <string name="try_again">Try again</string>
    <string name="no_connection_title">Connection error</string>
    <string name="no_connection_message">Please check your internet connection</string>
    <string name="title_activity_show_web_view">ShowWebView</string>
    <string name="amount">Amount</string>
    <string name="account_no">Account No.</string>
    <string name="do_you_want_to_cash_out">Do you want to Cash Out</string>
    <string name="job_categories">Job Categories</string>
    <string name="name_on_card">Name on Card</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="expiry">Expiry</string>
    <string name="Options">Options</string>
    <string name="cancellation_note">** I hereby confirm that the job has not been completed and that no payment is due. If cancellation is made less than 24 hours before Job date, I understand that a cancellation fee may apply.</string>
    <string name="invest">Invest</string>
    <string name="opt_email">Opt Email Notification</string>
    <string name="checkr_com_identity_verification_and_background_check">Checkr.com Identity Verification and Background Check</string>
    <string name="add_a_job">Add A Job</string>
    <string name="no_jobs_found_using_these_filters_n_please_modify_your_filter_selections">No Jobs Found Using These Filters. \n Please Modify Your Filter Selections</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rate_user_to_mark_job_as_complete">Rate User to Mark Job as Complete</string>
    <string name="complete">Complete</string>
    <string name="check_status">Check Status</string>
    <string name="close">Close</string>
    <string name="txt_progress">Please Wait&#8230;</string>
    <string name="checker">To review your background check status, please visit: </string>
    <string name="national_criminal_search">National Criminal Search</string>
    <string name="global_watchlist_search">Global Watchlist Search</string>
    <string name="sex_offender_registry_search">Sex Offender Registry Search</string>
    <string name="ssn_trace">SSN Trace</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="why_do_you_need_a_stripe_account_to_apply_for_a_job_on_azzida">Applying for a Job on Azzida Requires a Stripe Account</string>
    <string name="in_order_to_receive_payments_for_work_completed_on_azzida_you_will_first_need_to_set_up_a_stripe_account_and_link_it_to_your_bank_account_for_funds_transfer_stripe_is_a_leading_online_payments_services_provider_that_provides_payments_solutions_for_companies_like_amazon_google_lyft_and_uber_once_you_have_created_your_account_you_can_use_your_stripe_account_number_to_receive_payments_for_any_jobs_your_perform_on_the_azzida_platform_for_more_information_see_the_payments_and_fees_section_under_azzida_s_terms_of_use">In order to receive payments for work completed on Azzida, you will first need to set up a Stripe account and link it to your bank account for funds transfer. Stripe is a leading, online payments services provider that provides payments solutions for companies like Amazon, Google, Lyft and Uber. Once you have created your account, you can use your Stripe account number to receive payments for any jobs your perform on the Azzida platform. For more information, see the Payments and Fees section under Azzida’s Terms of Use.</string>
    <string name="add">Add</string>
</resources>