<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/imglogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/az_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_azzida"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imglogo"
        android:layout_marginTop="30dp"
        android:background="@color/white" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="120dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/txt_signin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/LoginText"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/fields_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/container"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingEnd="20dp"
                            android:paddingRight="20dp">


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputLayoutEmail"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:hint="@string/email_id"
                                app:endIconMode="clear_text"
                                app:endIconTint="@color/colorPrimaryDark">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edt_Emial"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textEmailAddress" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="18.7dp"
                                android:background="@drawable/blue_fill__rounded_color"
                                android:gravity="center"
                                android:onClick="ForgotPassword"
                                android:paddingTop="14dp"
                                android:paddingBottom="14dp"
                                android:text="@string/submit"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="5dp" />
                        </LinearLayout>


                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
